--- a/index.css
+++ b/index.css
@@ -87,3 +87,34 @@ body {
     font-size: 60px;
 
 }
+
+#loader-main {
+
+    margin: auto;
+
+}
+
+.preloader-center{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#preloader {
+
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background: rgb(245, 245, 245);
+
+}
+
+#qrcode {
+
+    height: 0;
+    overflow: hidden;
+
+}
